View Issue Details

IDProjectCategoryView StatusLast Update
0032271Open CASCADEOCCT:Testspublic2023-08-01 15:06
Reporterbugmaster Assigned Tovpozdyayev 
PrioritynormalSeverityminor 
Status assignedResolutionopen 
Product Version7.6.0 
Target VersionUnscheduled 
Summary0032271: Tests - vselect/bugs/bug544 hangs
DescriptionReproduced on:
Current master
Linux only
Tested on Debian 8.0.

Draw[3]> test vselect bugs bug544 1
Executing /dn62/builds/WEEK-13/OCCT_SRC/tests/vselect/begin...
cpulimit 300
CPU and elapsed time limit set to 300 seconds
pload VISUALIZATION TOPTEST
Executing /dn62/builds/WEEK-13/OCCT_SRC/tests/vselect/bugs/bug544...
========
OCC544: Problems with the results of MakePipeShell
========
....
The result is a TopAbs_SOLID

vdisplay result
Process killed by elapsed limit  (300 sec)


here the test execution stops
TagsNo tags attached.
Test case number

Relationships

child of 0032208 closedbugmaster Tests - refactor visualization tests to cover several graphic drivers 

Activities

git

2021-04-07 10:26

administrator   ~0100162

Branch CR32271 has been created by kgv.

SHA-1: 8d9ee272787be9aa29b58a248a8335b4e9822e85


Detailed log of new commits:

Author: bugmaster
Date: Sat Mar 27 15:41:34 2021 +0300

    0032271: Tests - vselect/bugs/bug544 hangs

Issue History

Date Modified Username Field Change
2021-03-31 11:46 bugmaster New Issue
2021-03-31 11:46 bugmaster Assigned To => apn
2021-03-31 11:53 bugmaster Summary Tests: vselect bugs bug544 hangs during results displaying on Linux only => Tests: vselect bugs bug544 hungs
2021-03-31 11:53 bugmaster Description Updated
2021-03-31 11:54 bugmaster Assigned To apn => kgv
2021-03-31 11:54 bugmaster Status new => assigned
2021-03-31 12:00 kgv Description Updated
2021-03-31 12:02 kgv Relationship added child of 0032208
2021-03-31 13:12 kgv Summary Tests: vselect bugs bug544 hungs => Tests - vselect bugs bug544 hungs
2021-03-31 19:04 kgv Summary Tests - vselect bugs bug544 hungs => Tests - vselect/bugs/bug544 hangs
2021-04-07 10:26 git Note Added: 0100162
2021-10-18 11:04 kgv Target Version 7.6.0 => 7.7.0
2022-10-19 15:50 smoskvin Assigned To kgv => vpozdyayev
2022-10-24 10:43 szy Target Version 7.7.0 => 7.8.0
2023-08-01 15:06 dpasukhi Target Version 7.8.0 => Unscheduled