0032271: Tests - vselect/bugs/bug544 hangs